# POC_CCR

./: Makefile  README.md
app/: Cargo.toml  Enclave_u.c  Enclave_u.h  build.rs
app/src/: main.rs
enclave/: Cargo.toml  Enclave.config.xml  Enclave.edl  Enclave_t.c  Enclave_t.h
enclave/src/: lib.rs
